--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==2.2.6
 django-allauth==0.40.0
+django-heroku==0.3.1
+gunicorn==19.9.0
 idna==2.8
 oauthlib==3.1.0
 pep8==1.7.1
@@ -23,3 +25,4 @@ social-auth-app-django==3.1.0
 social-auth-core==3.2.0
 sqlparse==0.3.0
 urllib3==1.25.6
+whitenoise==4.1.4
